ROX-8209 Add runtimeclass as a policy criterion (stackrox/rox#9827)
