# generated/api/v1/deployment_service.swagger.json
@@ -687,6 +687,9 @@
         "hostIpc": {
           "type": "boolean"
         },
+        "runtimeClass": {
+          "type": "string"
+        },
         "tolerations": {
           "type": "array",
           "items": {
@@ -714,7 +717,7 @@
           }
         }
       },
-      "title": "Next available tag: 34"
+      "title": "Next available tag: 35"
     },
     "storageEmbeddedSecret": {
       "type": "object",
